[package]
name = "sol"
version = "0.1.0"
authors = ["Eric RH <eric.renaud.houde@gmail.com>"]
edition = "2018"

[dependencies]
winit = "0.26.1"
image = "0.24.1"
ash = "0.36.0"
ash-window = "0.9.0"
vk-mem = { git="https://github.com/gwihlidal/vk-mem-rs" }
shaderc = "0.7"
glam = { version = "0.20.2", features = ["serde"] }
gltf = "1.0.0"

# [profile.release]
# debug = true